[tool.poetry]
name = "osintframework"
version = "0.0.1"
description = "software para coleta de informação em fontes abertas"
authors = ["darkcode357 <darkcode357@gmail.com>"]
license = "BSD License"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
